@@ -1,11 +1,13 @@
 package konra.reno.util;
 
+import lombok.SneakyThrows;
 import org.apache.commons.codec.binary.Base64;
 import org.springframework.stereotype.Service;
 
 import javax.crypto.Cipher;
 import javax.crypto.spec.IvParameterSpec;
 import javax.crypto.spec.SecretKeySpec;
+import javax.xml.bind.DatatypeConverter;
 import java.nio.charset.StandardCharsets;
 import java.security.*;
 
@@ -14,7 +16,7 @@ public class Crypto {
 
     private static String initVector = "24cd5de2a352a857";
 
-    public static String encAESBase64(String key, String value) {
+    public static String encAESHex(String key, String value) {
 
         try {
 
@@ -26,7 +28,7 @@ public class Crypto {
 
             byte[] encrypted = cipher.doFinal(value.getBytes());
 
-            return Base64.encodeBase64String(encrypted);
+            return DatatypeConverter.printHexBinary(encrypted);
 
         } catch (Exception ex) {
 
@@ -36,7 +38,7 @@ public class Crypto {
         return null;
     }
 
-    public static String decAESBase64(String key, String encrypted) {
+    public static String decAESHex(String key, String encrypted) {
 
         try {
 
@@ -46,7 +48,7 @@ public class Crypto {
             Cipher cipher = Cipher.getInstance("AES/CBC/PKCS5PADDING");
             cipher.init(Cipher.DECRYPT_MODE, keySpec, iv);
 
-            byte[] original = cipher.doFinal(Base64.decodeBase64(encrypted));
+            byte[] original = cipher.doFinal(DatatypeConverter.parseHexBinary(encrypted));
 
             return new String(original);
 
@@ -63,15 +65,12 @@ public class Crypto {
         return keyPair(512);
     }
 
+    @SneakyThrows
     public static KeyPair keyPair(int keySize) {
 
         KeyPairGenerator keyPairGenerator = null;
 
-        try {
-            keyPairGenerator = KeyPairGenerator.getInstance("RSA");
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
+        keyPairGenerator = KeyPairGenerator.getInstance("RSA");
 
         keyPairGenerator.initialize(keySize);
         return keyPairGenerator.genKeyPair();
@@ -99,23 +98,17 @@ public class Crypto {
 
     }
 
+    @SneakyThrows
     public static byte[] hash(String original){
 
         MessageDigest digest = null;
-
-        try {
-            digest = MessageDigest.getInstance("SHA-256");
-
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
-
+        digest = MessageDigest.getInstance("SHA-256");
         return digest.digest(original.getBytes(StandardCharsets.UTF_8));
     }
 
-    public static String hashB64(String original){
+    public static String hashHex(String original){
 
-        return Base64.encodeBase64String(hash(original));
+        return DatatypeConverter.printHexBinary(hash(original));
     }
 
     public static String hashString(String original){
